--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "ngx-mask": "^18.0.3",
     "rxjs": "~7.8.0",
+    "tecnoaging-web": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
