--- a/backend/forms/src/main/resources/application.properties
+++ b/backend/forms/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=forms
 spring.datasource.url=jdbc:postgresql://localhost:5432/forms-test
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
