--- a/backend/_tecnicos/Tecnicos/src/main/resources/application.properties
+++ b/backend/_tecnicos/Tecnicos/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Tecnicos
+spring.datasource.url=jdbc:postgresql://localhost:5432/tecnicos
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+server.port=5002
