forms/saga start

--- a/backend/_forms/build.gradle
+++ b/backend/_forms/build.gradle
@@ -18,10 +18,14 @@ repositories {
 }
 
 dependencies {
+
+	implementation 'org.springframework.boot:spring-sboot-starter-amqp'
+	implementation 'org.springframework.amqp:spring-rabbit-stream'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
