--- a/backend/_forms/src/main/resources/application.properties
+++ b/backend/_forms/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=forms
-spring.datasource.url=jdbc:postgresql://localhost:5432/forms-test
+spring.datasource.url=jdbc:postgresql://localhost:5433/db-forms
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -8,4 +8,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
 server.port=5000
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.amqp.deserialization.trust.all=true
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.connection-timeout=10000
+
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.retry.max-interval=10000
