--- a/backend/_pacientes/Pacientes/src/main/resources/application.properties
+++ b/backend/_pacientes/Pacientes/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Pacientes
-spring.datasource.url=jdbc:postgresql://localhost:5432/pacientes
+spring.datasource.url=jdbc:postgresql://localhost:5433/db-pacientes
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -9,3 +9,18 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.port=5001
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.amqp.deserialization.trust.all=true
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.connection-timeout=5000
+
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.retry.max-interval=10000
