--- a/backend/_SAGA/SAGA/src/main/resources/application.properties
+++ b/backend/_SAGA/SAGA/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SAGA
+
+server.port=5010
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.amqp.deserialization.trust.all=true
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.connection-timeout=5000
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.retry.max-interval=10000
+spring.main.allow-bean-definition-overriding=true
