--- a/backend/_gateway/package.json
+++ b/backend/_gateway/package.json
@@ -10,6 +10,7 @@
     "author": "Seu Nome",
     "license": "ISC",
     "dependencies": {
+      "cors": "^2.8.5",
       "body-parser": "^1.20.2",
       "cookie-parser": "^1.4.6",
       "dotenv-safe": "^8.2.0",
