--- a/backend/_SAGA/SAGA/src/main/resources/application.properties
+++ b/backend/_SAGA/SAGA/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.rabbitmq.listener.simple.retry.initial-interval=1000
 spring.rabbitmq.listener.simple.retry.multiplier=2.0
 spring.rabbitmq.listener.simple.retry.max-interval=10000
 spring.main.allow-bean-definition-overriding=true
+
+spring.rabbitmq.listener.type=simple
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
