--- a/backend/_forms/src/main/resources/application.properties
+++ b/backend/_forms/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.rabbitmq.password=admin
 spring.amqp.deserialization.trust.all=true
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.connection-timeout=10000
+spring.rabbitmq.listener.type=simple
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
 
 
 spring.rabbitmq.listener.simple.retry.enabled=true
