--- a/backend/_tecnicos/Tecnicos/src/main/resources/application.properties
+++ b/backend/_tecnicos/Tecnicos/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.rabbitmq.password=admin
 spring.amqp.deserialization.trust.all=true
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.connection-timeout=5000
+spring.rabbitmq.listener.type=simple
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
 
 
 spring.rabbitmq.listener.simple.retry.enabled=true
