Separação ta pronta
TODO, terminar os endpoints no gateway e finalizar a implementação no front web

--- a/backend/Postman/Docker/docker-compose.yaml
+++ b/backend/Postman/Docker/docker-compose.yaml
@@ -1,13 +1,16 @@
+version: '3.8'
 
 services:
   rabbitmq:
     image: rabbitmq:3-management
     ports:
-      - "5672:5672"    # AMQP port
-      - "15672:15672"   # Management UI port
+      - "5672:5672"   
+      - "15672:15672"  
     environment:
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin
+    networks:
+      - postgres-network
     restart: unless-stopped
 
   postgres:
@@ -38,8 +41,23 @@ services:
       - postgres-network
     restart: unless-stopped
 
+  mongodb:
+    image: mongo:6.0
+    container_name: auth_mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - postgres-network
+    restart: unless-stopped
+
 volumes:
   postgres_data:
+  mongo_data:
 
 networks:
   postgres-network:
