--- a/backend/_auth/Auth/src/main/resources/application.properties
+++ b/backend/_auth/Auth/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=Auth
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=auth_db
+spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/auth_db?authSource=admin
+spring.data.mongodb.authentication-database=admin  
+spring.data.mongodb.username=admin                 
+spring.data.mongodb.password=admin
+
+server.port=5003
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.amqp.deserialization.trust.all=true
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.connection-timeout=10000
+spring.rabbitmq.listener.type=simple
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.retry.max-interval=10000
