--- a/backend/Postman/Docker/docker-compose.yaml
+++ b/backend/Postman/Docker/docker-compose.yaml
@@ -26,8 +26,12 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - postgres-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
-
   pgadmin:
     image: dpage/pgadmin4
     depends_on:
