refactor do projeto pronto WIP: criação dos novos serviços e comunicação entre eles

--- a/backend/_SAGA/SAGA/Dockerfile
+++ b/backend/_SAGA/SAGA/Dockerfile
@@ -1,21 +1,31 @@
+
 FROM gradle:8.4-jdk17 AS builder
 
 WORKDIR /app
 
-COPY build.gradle settings.gradle ./
+COPY settings.gradle .
+
 COPY gradle ./gradle
 
-RUN gradle dependencies --no-daemon
+COPY gradlew .
+
+RUN chmod +x ./gradlew
 
 COPY . .
 
-RUN gradle bootJar --no-daemon
+WORKDIR /app/_SAGA/SAGA
+
+RUN ../../gradlew dependencies --no-daemon
+
+RUN ../../gradlew bootJar --no-daemon
+
+WORKDIR /app
 
 FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY --from=builder /app/_SAGA/SAGA/build/libs/*.jar app.jar
 
 EXPOSE 5010
 
