--- a/backend/_auth/Auth/Dockerfile
+++ b/backend/_auth/Auth/Dockerfile
@@ -1,22 +1,32 @@
+
 FROM gradle:8.4-jdk17 AS builder
 
 WORKDIR /app
 
-COPY build.gradle settings.gradle ./
+COPY settings.gradle .
+
 COPY gradle ./gradle
 
-RUN gradle dependencies --no-daemon
+COPY gradlew .
+
+RUN chmod +x ./gradlew
 
 COPY . .
 
-RUN gradle bootJar --no-daemon
+WORKDIR /app/_auth/Auth
+
+RUN ../../gradlew dependencies --no-daemon
+
+RUN ../../gradlew bootJar --no-daemon
+
+WORKDIR /app
 
 FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY --from=builder /app/_auth/Auth/build/libs/*.jar app.jar
 
-EXPOSE 5003
+EXPOSE 5000
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
