--- a/backend/_forms/Forms/src/main/resources/application.properties
+++ b/backend/_forms/Forms/src/main/resources/application.properties
@@ -5,11 +5,12 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-server.port=5000
+server.port=5001
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
