--- a/backend/_tecnicos/Tecnicos/Dockerfile
+++ b/backend/_tecnicos/Tecnicos/Dockerfile
@@ -1,22 +1,30 @@
+
 FROM gradle:8.4-jdk17 AS builder
 
 WORKDIR /app
 
-COPY build.gradle settings.gradle ./
+COPY settings.gradle .
+
 COPY gradle ./gradle
 
-RUN gradle dependencies --no-daemon
+COPY gradlew .
+
+RUN chmod +x ./gradlew
 
 COPY . .
 
-RUN gradle bootJar --no-daemon
+WORKDIR /app/_tecnicos/Tecnicos
+
+RUN ../../gradlew dependencies --no-daemon
+
+RUN ../../gradlew bootJar --no-daemon
 
 FROM eclipse-temurin:17-jre
 
 WORKDIR /app
 
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY --from=builder /app/_tecnicos/Tecnicos/build/libs/*.jar app.jar
 
-EXPOSE 5002
+EXPOSE 5005
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
