--- a/backend/_tecnicos/Tecnicos/build.gradle
+++ b/backend/_tecnicos/Tecnicos/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.4'
+	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -18,6 +18,8 @@ repositories {
 }
 
 dependencies {
+	implementation project(':common-dtos') 
+    implementation project(':common-events')
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
